<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tallinn Transport</string>

    <string name="navigation_timetable">Timetable</string>
    <string name="navigation_map">Live map</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_ticket">Tickets</string>

    <string name="error_location">Failed to determine your location</string>
    <string name="error_big">Failed to load Departures</string>
    <string name="error_bus">Real-time bus departures are unavailable</string>
    <string name="error_train">Real-time train departures are unavailable</string>
    <string name="error_setup">Failed to lauch app due to network connection/internal error</string>
    <string name="error_name">Error</string>
    <string name="error_retry">Retry</string>
    <string name="error_unsupported">Not TLT or Elron stop</string>
    <string name="error_nostops">No stops found around you</string>
    <string name="error_save">Error saving stops to internal storage</string>
    <string name="error_elron_down">Error connecting to ELRON webserver</string>
    <string name="error_elron_parse">Error parsing response from ELRON webserver</string>
    <string name="error_tlt_down">Error connecting to TLT webserver</string>
    <string name="error_tlt_parse">Error parsing response from TLT webserver</string>
    <string name="error_email">Invalid email</string>
    <string name="error_internet">A web request has failed, please check your internet connection</string>

    <string name="error_payment_cart">There has been an error while trying to request a ticket, we are sorry about this, please try again starting from beginning</string>
    <string name="error_payment_cancelled">Payment has been refused or cancelled</string>
    <string name="error_payment_mismatched">ATTENTION: Your payment has succeeded but for some reason app failed to receive a ticket. We will attempt to send you an email with the ticket. \n Please also note these details in order to contact customer support in case you dont receive your email</string>


    <string name="success_payment">Your ticket has been successfully processed</string>


    <string name="price_train">Price in train: %s</string>
    <string name="route_time">Route time: %s</string>
    <string name="express">EXPRESS</string>
    <string name="stop_from">Origin stop</string>
    <string name="stop_to">Destination stop</string>
    <string name="stop_date">Date of travel</string>
    <string name="search_hint">Stop name</string>
    <string name="arrives_cont">Arrives:\u0020</string>
    <string name="route_info">Route info</string>
    <string name="loading">Loading</string>
    <string name="show_on_map">Show on map</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="no_departures">No Departures</string>
    <string name="search">Search</string>
    <string name="buy">Buy</string>
    <string name="tc"><u>Terms and Conditions</u></string>
    <string name="tc_hint">By buying a ticket you agree with</string>
    <string name="noticket">Welcome to elron ticket beta! \n
        Here you can purchase tickets for train travel. \n
        Right now you can purchase any direct one-time ticket on all Estonian routes.</string>
    <string name="deleteticket">Delete ticket</string>

    <string name="setup_welcome">Welcome to Tallinn Transport</string>
    <string name="setup_1">Completing first time setup</string>
    <string name="setup_2">This app needs location permission in order to quickly show departures around you</string>
    <string name="setup_grant">Grant</string>
    <string name="setup_start">Start</string>

    <string name="google_maps_key">AIzaSyDbzS8CBF-mAMWY7z-CE_QXC0JYvVy65V0</string>


    <string name="settings">Settings</string>
    <string name="settings_ticket_beta">Elron Ticket Beta</string>
    <string name="settings_ticket_beta_on">Please send feedback to alex@thatguyalex.com</string>
    <string name="settings_ticket_beta_off">Click to start participating</string>

</resources>
