<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.TicketFragment">

    <include layout="@layout/card_ticket"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ticket_expired_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteticket"
        android:layout_margin="@dimen/matgin"
        android:visibility="gone"
        app:backgroundTint="@color/darkred"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    <LinearLayout
        android:id="@+id/ticket_no_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:text="@string/noticket"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ticket_no_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    </LinearLayout>

</LinearLayout>