<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="@color/colorPrimary"
    tools:context=".SetupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:drawableTop="@drawable/ic_transit"
        android:text="@string/setup_welcome"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="15sp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="1"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/setup_down_text"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/setup_1"/>
        <!--android:drawableRight="@drawable/ic_done" -->

        <ProgressBar
            android:id="@+id/setup_down_progress"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:indeterminateTint="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:paddingRight="15sp"
            android:textSize="20sp"
            android:text="2"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/setup_perm_text"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/setup_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_perm_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/setup_grant"
            app:backgroundTint="@color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setup_confirmsetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="@dimen/matgin"
        android:text="@string/setup_start"
        app:backgroundTint="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</LinearLayout>