<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TravelFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/matgin_half"
        android:paddingBottom="@dimen/matgin_half"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:elevation="4dp">

        <AutoCompleteTextView
            android:id="@+id/travel_origin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/matgin"
            android:layout_marginRight="@dimen/matgin"
            android:background="@drawable/input_travel"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_search"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/stop_from"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_white"/>

        <AutoCompleteTextView
            android:id="@+id/travel_destination"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/matgin"
            android:layout_marginRight="@dimen/matgin"
            android:background="@drawable/input_travel"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_search"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/stop_to"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/matgin_half"
        android:paddingBottom="@dimen/matgin_half"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:elevation="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/travel_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/matgin"
            android:layout_marginRight="@dimen/matgin"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/stop_date"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/travel_go"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/matgin"
            android:layout_marginRight="@dimen/matgin"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/search"/>

    </LinearLayout>

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/travel_loading"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="-7dp"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/travel_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:id="@+id/travel_tipholder"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/big_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </FrameLayout>

</LinearLayout>